1.0a6
-----

- Fix packaging error.
  [wichert]

1.0a5
-----

- Add a MockFile class to help with handling of files when using the
  DummyDataManager.
  [fschulze]


1.0a4
-----

- Add a new openFile method to facilitate opening of files that have not been
  commited yet.
  [wichert]


1.0a3
-----

- Add method to facilitate unit testing of code using repoze.filesafe.
  [wichert]

1.0a2
-----

- Add support for Python 2.4 and 2.5. [wichert]


1.0a1
-----

- Initial Release